# dcg

./: .gitignore  build.sbt  dcg.cabal  repl.sh  run.sh  runTests.sh
resources/: feature_based_gram.dcg  simple_gram.dcg  test_gram.dcg
src/: Main.hs
src/DCG/: ChartParser.hs  Grammar.hs  GrammarParser.hs
src/Util/: Container.hs
src/main/scala/org/lolczak/dcg/: DcgApp.scala  Grammar.scala  Lexicon.scala  package.scala
src/main/scala/org/lolczak/dcg/grammar/: GrammarParser.scala  Model.scala
src/main/scala/org/lolczak/dcg/loader/: GrammarLoader.scala  ResourceLoader.scala
src/main/scala/org/lolczak/dcg/model/: FeatureStruct.scala  FeatureZipper.scala  Grammar.scala  Lexicon.scala  Nonterminals.scala  TermComparator.scala
src/main/scala/org/lolczak/dcg/parser/: ChartParser.scala  Edge.scala  ParseTree.scala  State.scala
src/main/scala/org/lolczak/parsing/lexical/: GenericLexer.scala  GenericTokens.scala  LanguageDef.scala  package.scala
src/main/scala/org/lolczak/parsing/syntactical/: GenericTokenParsers.scala
src/main/scala/org/lolczak/parsing/util/: HelperParsers.scala
src/main/scala/org/lolczak/util/: Generators.scala  Resources.scala
src/test/resources/: feature_based_gram.dcg  functions.groovy  gram_guards.dcg  logback.xml  simple_gram.dcg
src/test/resources/include_sample/: lexicon.dcg  main.dcg  rules.dcg
src/test/scala/org/lolczak/dcg/: GrammarFeaturesSpec.scala
src/test/scala/org/lolczak/dcg/grammar/: GrammarParserSpec.scala
test/DCG/: ChartParserSpec.hs  GrammarParserSpec.hs  GrammarSpec.hs  TestData.hs
(+56 files in other folders)
