name:              dcg
version:           1.0
Build-Type:        Simple
cabal-version:     >=1.8

executable dcg
    build-depends: base -any, unification-fd ==0.10.0.1, parsec == 3.1.9,
                   transformers -any, containers -any, mtl ==2.2.1, text == 1.2.1.1
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

library
    build-depends: base -any, unification-fd ==0.10.0.1, parsec == 3.1.9,
                   transformers -any, containers -any, mtl ==2.2.1, text == 1.2.1.1
    exposed-modules: DCG.Grammar, DCG.ChartParser, Util.Container, DCG.GrammarParser
    exposed: True
    buildable: True
    hs-source-dirs: src


test-suite spec
    build-depends: base -any, unification-fd ==0.10.0.1, parsec == 3.1.9, text == 1.2.1.1,
                   transformers -any, containers -any, mtl ==2.2.1, hspec == 2.*,
                   dcg -any
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: test
    other-modules: DCG.GrammarSpec, DCG.ChartParserSpec, DCG.GrammarParserSpec, DCG.TestData
    ghc-options: -Wall
